--- a/css/styles.css
+++ b/css/styles.css
@@ -383,8 +383,7 @@ footer {
   .contact-button {
     display: flex;
     align-items: center;
-    background-color: #fff;
-    color: #000;
+    color: white;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
